# KonturUniversalConverter

./: .gitignore  CMakeLists.txt  build.py
cmake/: Utilities.cmake
core/: CMakeLists.txt
core/include/algorithm/: AccurateMultiplier.h  BinaryOperator.h  DirectedWeightedGraph.h  PredecessorsRecorder.h
core/include/converter/: ConvertableParser.h  Converter.h
core/include/exception/: Exception.h
core/src/: ConvertableParser.cpp  Converter.cpp
integration_tests/: client.py  tests.py
integration_tests/res/: rules.csv
integration_tests/res/test_cases/: case1.json  case2.json  case3.json  case4.json
server/: CMakeLists.txt
server/include/: ConvertingHandler.h  ConvertingServerApp.h  ConvertingServerApp.h.save-failed
server/src/: ConvertingHandler.cpp  ConvertingServerApp.cpp  main.cpp
tests/src/test_cases/: ConverterTests.cpp  GraphTests.cpp  ParserTests.cpp  parse_convertable_tests.cpp.save-failed
unit_tests/: CMakeLists.txt
unit_tests/src/test_cases/: ConverterTests.cpp  GraphTests.cpp  ParserTests.cpp
